--- a/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
+++ b/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
@@ -53,7 +53,7 @@
 
     <div class="col-sm-12">
       <h4> What is Chinese Drywall? </h4>
-      <p>
+      <p class='col-md-12'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
@@ -62,21 +62,24 @@
 
     <div class="col-sm-12">
       <h4> How do you know if you have Chinese Drywall? </h4>
-      <p>
+      <p class='col-md-12'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
     </div>
 
+    <!-- This is making space for the HR -->
+    <div class='col-sm-12'>
+      <hr>
+    </div>
 
-    <br> <br>
     <h1 style="text-align: center"> If you hire Tangent to replace your Chinese Drywall... </h1>
     <hr>
 
     <div class="col-sm-12">
       <h4> We handle the removal of bad drywall... </h4>
-      <p>
+      <p class='col-md-12'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
@@ -85,7 +88,7 @@
 
     <div class="col-sm-12">
       <h4> We handle the HEPA cleaning... </h4>
-      <p>
+      <p class='col-md-12'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
@@ -94,33 +97,33 @@
 
     <div class="col-sm-12">
       <h4> We handle the drywall replacement... </h4>
-      <h5>
+      <h5 style='font-weight:bold'>
         Hang:
       </h5>
-      <p>
+      <p class='col-md-12'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat.
       </p>
 
-      <h5>
+      <h5 style='font-weight:bold'>
         finish:
       </h5>
-      <p>
+      <p class='col-md-12'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat.
       </p>
 
-      <h5>
+      <h5 style='font-weight:bold'>
         texture:
       </h5>
-      <p>
+      <p class='col-md-12'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat.
       </p>
 
       <div>
         <h4> And last we handle the painting. </h4>
-        <p>
+        <p class='col-md-12'>
           Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
           topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
           Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
