Finishing touches, uploaded online.
The website is now online.  Moved files and renamed tangentHome to Index.html for online.  Moved pictures, changed pathing in navbar.

--- a/TangentConstruction/TangentConstruction New Site/index.html
+++ b/TangentConstruction/TangentConstruction New Site/index.html
@@ -13,34 +13,34 @@
 
     <br>
     <div id="nav" class="col-lg-12 center-block" style="text-align:center; align-content: center;">
-      <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
+      <div class="image"> <img src="../EmailedPictures/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
       <br>
       <div class="navbar">
         <div class="col-sm-1"> </div>
 
         <div class="col-sm-2">
-          <a href="TangentHome.html" style="text-decoration: underline" target="_self"> Tangent Home </a>
+          <a href="../index.html" style="text-decoration: underline" target="_self"> Tangent Home </a>
         </div>
         <div class="col-sm-2">
           <div class="dropdown">
             <button class="btn" type="button" data-toggle="dropdown">Stucco Remediation
               <span class="caret"></span></button>
             <ul class="dropdown-menu">
-              <li><a href="StuccoRemediationHome.html">Overview</a></li>
-              <li><a href="SealAndPaint.html">Seal and Paint</a></li>
-              <li><a href="StuccoRemediation.html">Re-Stucco</a></li>
+              <li><a href="TangentConstruction New Site/StuccoRemediationHome.html">Overview</a></li>
+              <li><a href="TangentConstruction New Site/SealAndPaint.html">Seal and Paint</a></li>
+              <li><a href="TangentConstruction New Site/StuccoRemediation.html">Re-Stucco</a></li>
             </ul>
           </div>
         </div>
         <div class="col-sm-2">
-          <a href="NewConstruction.html" target="_self"> New Construction </a>
+          <a href="TangentConstruction New Site/NewConstruction.html" target="_self"> New Construction </a>
         </div>
         <div class="col-sm-2">
-          <a href="ChineseDrywall.html" target="_self"> Chinese Drywall </a>
+          <a href="TangentConstruction New Site/ChineseDrywall.html" target="_self"> Chinese Drywall </a>
         </div>
         <div class="col-sm-2">
-          <a href="ContactUs.html" target="_self"> Contact Us </a>
+          <a href="TangentConstruction New Site/ContactUs.html" target="_self"> Contact Us </a>
         </div>
         <div class="col-sm-1"> </div>
       </div>
