--- a/TangentConstruction/TangentConstruction New Site/SealAndPaint.html
+++ b/TangentConstruction/TangentConstruction New Site/SealAndPaint.html
@@ -13,13 +13,13 @@
 
     <br>
     <div id="nav" class="col-lg-12 center-block" style="text-align:center; align-content: center;">
-      <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
+      <div class="image"> <img src="../EmailedPictures/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
       <br>
       <div class="navbar">
         <div class="col-sm-1"> </div>
         <div class="col-sm-2">
-          <a href="TangentHome.html" target="_self"> Tangent Home </a>
+          <a href="../index.html" target="_self"> Tangent Home </a>
         </div>
         <div class="col-sm-2">
           <div class="dropdown">
@@ -79,7 +79,6 @@
 
     <h2 style="text-align: center">
       A cheaper option for less damaged stucco is to seal and repaint it.
-      <hr>
     </h2>
 
     <div id="stucco" class='col-lg-12'>
@@ -93,7 +92,6 @@
     </div>
 
     <div id="painting" class='col-lg-12'>
-      <hr>
       <h4 style="text-align: center"> Then we re-paint the house.. </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
