--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
@@ -14,14 +14,14 @@
     <!-- Logo -->
     <br>
     <div id="nav" class="col-lg-12 center-block" style="text-align:center; align-content: center;">
-      <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
+      <div class="image"> <img src="../EmailedPictures/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
       <br>
       <div class="navbar">
         <div class="col-md-1"> </div>
 
         <div class="col-md-2">
-          <a href="TangentHome.html" target="_self"> Tangent Home </a>
+          <a href="../index.html" target="_self"> Tangent Home </a>
         </div>
         <div class="col-md-2">
           <div class="dropdown">
